--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.4.5	2022-06-19
+	* Migration of legacy scripts to the Proch-N50 repository
+	* Minor changes to the documentation and updated links
+
 1.4.4	2022-06-12
 	* Starting migration of the repository to telatin/proch-n50
 
