--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.4.6	2022-06-20
+	* Extended documentation
+
 1.4.5	2022-06-19
 	* Migration of legacy scripts to the Proch-N50 repository
 	* Minor changes to the documentation and updated links
