--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
-1.5.0	2022-06-22
+1.4.7	2022-06-22
     * Documentation fixes
+	* Updated Windows tests
 
 1.4.6	2022-06-20
 	* Extended documentation
