--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-1.4.7	2022-06-22
+1.4.8	2022-06-22
+	* Updated binaries from Seqfu 0.x
+	
+1.4.7	2022-06-21
 	* Preparing for 5.32 (unescaped braces will be fatal in regexes)
     * Documentation fixes
 	* Updated Windows tests
