--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.5.3	2023-01-12
+	* Updates in test suite
+	
+1.5.2	2022-12-01
+	* Minor fix in POD documentation
+
+1.5.1	2022-06-29
+	* Minor fix in POD documentation
+
 1.5.0	2022-06-23
 	* Fix: fu-cat length selection, added test
 	* Fix: fu-count supports STDIN input
