--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 1.5.3	2023-01-12
-	* Updates in test suite
-	
+	* Refactoring test suite (TestFu.pm)
+
 1.5.2	2022-12-01
 	* Minor fix in POD documentation
 
