--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 1.7.0	2025-02-03
 	* General code refactoring
+	* Improved has_seqfu() handling when seqfu is not installed
+	* Updated docs
+	* Updated dist.ini with copyrights
   	* Fixed bug in fu-grep (-n was attempting to reverse complement the string; invalid operation but output was fine)
 
 1.6.1	2024-01-20
